@@ -73,6 +73,7 @@ dependencies {
   compileOnly group: 'commons-lang', name: 'commons-lang', version: '2.6'
   implementation project(':libs:opensearch-arrow-spi')
 
+  compileOnly project(":libs:agent-sm:bootstrap")
   compileOnly project(':libs:opensearch-plugin-classloader')
   testRuntimeOnly project(':libs:opensearch-plugin-classloader')
 
@@ -379,9 +380,7 @@ tasks.named("licenseHeaders").configure {
 
 tasks.test {
     environment "node.roles.test", "[]"
-    if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
-        jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED"]
-    }
+    jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED", "-Djdk.attach.allowAttachSelf=true", "-XX:+EnableDynamicAgentLoading" ]
 }
 
 tasks.named("sourcesJar").configure {
